[ROBOT] Action all

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -1,41 +1,41 @@
 {
     "plugins\/apcups\/desktop\/php\/apcups.php": {
-        "Ajouter un équipement": "Ajouter un équipement",
-        "Rechercher": "Rechercher",
-        "Mes onduleurs APC": "Mes onduleurs APC",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Onduleur APC": "Onduleur APC",
-        "Nom de l'équipement apcups": "Nom de l'équipement apcups",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
-        "Commentaire": "Commentaire",
-        "Adresse apcupsd": "Adresse apcupsd",
-        "Port apcupsd": "Port apcupsd",
-        "Puissance de l'onduleur": "Puissance de l'onduleur",
-        "Nom": "Nom",
-        "Valeur": "Valeur",
-        "Paramètres": "Paramètres"
+        "Ajouter un équipement": "Gerät hinzufügen",
+        "Rechercher": "Suchen",
+        "Mes onduleurs APC": "Meine APC-USV",
+        "Sauvegarder": "Speichern",
+        "Supprimer": "Löschen",
+        "Configuration avancée": "Erweiterte Konfiguration",
+        "Equipement": "Gerät",
+        "Commandes": "Befehle",
+        "Onduleur APC": "APC-USV",
+        "Nom de l'équipement apcups": "APC-USV Gerätename",
+        "Objet parent": "Elternobjekt",
+        "Aucun": "Keine",
+        "Catégorie": "Kategorie",
+        "Activer": "Aktivieren",
+        "Visible": "Sichtbar",
+        "Commentaire": "Kommentar",
+        "Adresse apcupsd": "APC-USV Adresse",
+        "Port apcupsd": "APC-USV Port",
+        "Puissance de l'onduleur": "USV Leistung",
+        "Nom": "Name",
+        "Valeur": "Wert",
+        "Paramètres": "Parameter"
     },
     "plugins\/apcups\/desktop\/js\/apcups.js": {
-        "Historiser": "Historiser"
+        "Historiser": "Archivieren"
     },
     "plugins\/apcups\/core\/class\/apcups.class.php": {
-        "Statut": "Statut",
-        "Evènement": "Evènement",
-        "Temps sur batterie": "Temps sur batterie",
-        "Courant Entrant": "Courant Entrant",
-        "Voltage Pile": "Voltage Pile",
-        "Modèle d'onduleur": "Modèle d'onduleur",
-        "% Charge": "% Charge",
+        "Statut": "Status",
+        "Evènement": "Ereignis",
+        "Temps sur batterie": "Akku-Laufzeit",
+        "Courant Entrant": "aktueller Strom",
+        "Voltage Pile": "Batteriespannung",
+        "Modèle d'onduleur": "USV Modell",
+        "% Charge": "Ladung %",
         "Batterie": "Batterie",
-        "Puissance fournie": "Puissance fournie",
-        "L\\adresse ne peut etre vide": "L\\adresse ne peut etre vide"
+        "Puissance fournie": "Leistungsaufnahme",
+        "L\\adresse ne peut etre vide": "Die Adresse darf nicht leer sein"
     }
 }
