--- a/doc/en_US/faq.asciidoc
+++ b/doc/en_US/faq.asciidoc
@@ -1,5 +1,5 @@
 [panel,primary]
-.Est-ce que le plugin s'appuie sur des API tiers ?
+. Is the plugin relies on third-party API?
 --
-Le plugin utilise apcupsd pour récupérer ses informations.
+The plugin uses apcupsd to retrieve its information.
 --
