--- a/doc/en_US/configuration.asciidoc
+++ b/doc/en_US/configuration.asciidoc
@@ -1,42 +1,42 @@
-=== The plugin configuration
+= The plugin configuration
 
-==== Global configuration
+= General configuration
 
 The plugin does not have general configuration.
 
-A noter que lorsque le plugin est activé, il effectue deux actions :
+Note that when the plugin is activated, it performs two actions:
 
-* Installation et configuration de apcupsd pour gérer un onduleur USB
-* Création d'un équipement pour déclarer l'onduleur USB créé
+* Installation and configuration of apcupsd to manage a USB UPS
+* Creation of equipment to declare the created USB UPS
 
-==== Equipment Configuration 
+= Configuration of equipment
 
-Comme indiqué plus haut, un premier équipement est créé à l'activation. Il est fonctionnel pour un onduleur USB local.
+As mentioned above, a first device is created upon activation. It is functional for a local USB ups.
 
-Vous pouvez ajouter d'autres équipements si vous disposez d'autres onduleurs sur le réseau par exemple.
+You can add other equipment if you have other inverters on the network for example.
 
-Le plugin se trouve dans la catégorie Monitoring.
+The plugin is in the Monitoring category.
 
 image::../images/apcups2.png[Image du produit]
 
 ===== Settings
 
-L'équipement dispose de 3 paramètres :
+The equipment has 3 parameters:
 
-* Adresse : l'adresse de connexion pour obtenir les informations APC (127.0.0.1 par défaut)
-* Port : le port d'écoute du service apcupsd (par défaut 3551)
-* Puissance : la puissance de l'onduleur (nécessaire pour avoir accès à la consommation)
+* Address: the address of connection for the APC (127.0.0.1 by default) information
+* Port: listening port of the apcupsd (default 3551) service
+* Power: the power of the ups (necessary to have access to the consumption)
 
-Attention : il faut bien saisir une adresse ip et pas un nom pour l'adresse, celle ci est utilisée pour identifier qui émet un event en push
+Attention: Please enter an ip address and not a name for the address, this one is used to identify which emits a push event
 
-Pour la puissance, elle est facilement identifiable dans le nom du modèle (Back-Up 550 USB par exemple, 550 est la puissance)
+For power, it is easily identifiable in the name of the template (Back - Up 550 USB for example, 550 is power)
 
 ==== Use
 
-L'équipement dispose d'un widget associé pour le tableau de bord.
+The equipment has a widget for the dashboard.
 
-La consommation est disponible pour être intégrée dans le plugin Energie par exemple via un calcul entre la charge et la puissance de l'onduleur.
+Consumption is available to be integrated into the energy plugin for example via a calculation between the load and the power of the inverter.
 
-L'information event sera utile pour déclencher des scénarios, ainsi que le statut.
+Event information will be useful for triggering scripts, as well as the status.
 
-La durée de batterie peut être un bon complément dans les scénarios déclenchés sur statut par exemple.
+Battery life can be a good complement in the scenarios triggered on status for example.
