[ROBOT] Action all

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -7,13 +7,13 @@
         "Supprimer": "Delete",
         "Configuration avancée": "Adanced Settings",
         "Equipement": "Equipment",
-        "Commandes": "Commandes",
-        "Onduleur APC": "Onduleur APC",
+        "Commandes": "Commands",
+        "Onduleur APC": "APC ups",
         "Nom de l'équipement apcups": "Nom de l'équipement apcups",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
+        "Objet parent": "Parent object",
+        "Aucun": "None",
+        "Catégorie": "Category",
+        "Activer": "Enable",
         "Visible": "Visible",
         "Commentaire": "Commentaire",
         "Adresse apcupsd": "Adresse apcupsd",
