[ROBOT] Action all

--- a/doc/en_US/distant.asciidoc
+++ b/doc/en_US/distant.asciidoc
@@ -1,6 +1,6 @@
 === Configuration d'un onduleur non connecté sur Jeedom
 
-==== Installation d'apcupsd
+==== Installation of apcupsd
 
 Apcupsd doit être installé biensur, c'est lui qui sera interrogé
 
