[ROBOT] Action all

--- a/doc/de_DE/changelog.asciidoc
+++ b/doc/de_DE/changelog.asciidoc
@@ -1,7 +1,7 @@
 ==== Version 1.1
 
-Passage au système de dépendances 2.0
+Die Umstellung auf das Abhängigkeitssystem 2.0
 
 ==== Version 1
 
-Création du plugin
+Erstellung des Plugins
