--- a/doc/fr_FR/presentation.asciidoc
+++ b/doc/fr_FR/presentation.asciidoc
@@ -17,4 +17,6 @@ Les informations fournies sont :
 
 image::../images/apcups1.png[Image du produit]
 
+Vous pouvez trouver des onduleurs APC en suivant ce lien par exemple :
 
+* http://amzn.to/2hWtxJ4[Onduleur APC 400 prises FR]
