--- a/doc/de_DE/presentation.asciidoc
+++ b/doc/de_DE/presentation.asciidoc
@@ -1,6 +1,6 @@
 === APC-USV, APC USV Überwachung
 
-Ce plugin permet de récupérer les informations d'onduleurs APC et également d'être averti sur leurs évènements.
+Dieses Plugin ermöglicht es, Informationen von der APC USV zu bekommen und ebenfalls über ihre Ereignisse gewarnt zu werden. 
 
 Il utilise apcupsd en dépendance (installer pendant l'activation du plugin) et permet de gérer un onduleur APC en USB ou distant.
 
@@ -11,12 +11,12 @@ Die bereitgestellten Informationen sind :
 * Courant Entrant : la tension du courant d'alimentation de l'onduleur
 * Modell : das USV Modell 
 * Status : der Status der USV
-* Temps sur batterie : la durée d'autonomie disponible
-* Voltage pile : tension de la pile
+* Batterielaufzeit : verfügbare Backup-Zeit
+* Batterie Spannung : Batterie Spannung 
 * Evènement : tout évènement détecté par le service apcupsd qui est transmit en push à Jeedom
 
 image::../images/apcups1.png[Image du produit]
 
-Vous pouvez trouver des onduleurs APC en suivant ce lien par exemple :
+Sie können APC USV-Anlagen zum Beispiel über diesen Link finden :
 
 * http://amzn.to/2hWtxJ4[Onduleur APC 400 prises FR]
