[ROBOT] Action all

--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -1,41 +1,41 @@
 {
     "plugins\/apcups\/desktop\/php\/apcups.php": {
-        "Ajouter un équipement": "Ajouter un équipement",
-        "Rechercher": "Rechercher",
-        "Mes onduleurs APC": "Mes onduleurs APC",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Onduleur APC": "Onduleur APC",
-        "Nom de l'équipement apcups": "Nom de l'équipement apcups",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
+        "Ajouter un équipement": "Agregar un dispositivo",
+        "Rechercher": "Buscar",
+        "Mes onduleurs APC": "Mis UPS APC",
+        "Sauvegarder": "Salvar",
+        "Supprimer": "Borrar",
+        "Configuration avancée": "Configuración avanzada",
+        "Equipement": "Dispositivo",
+        "Commandes": "Comandos",
+        "Onduleur APC": "UPS APC",
+        "Nom de l'équipement apcups": "Nombre del dispositivo apcups",
+        "Objet parent": "Objeto padre",
+        "Aucun": "Ninguno",
+        "Catégorie": "Categoría",
+        "Activer": "Activar",
         "Visible": "Visible",
-        "Commentaire": "Commentaire",
-        "Adresse apcupsd": "Adresse apcupsd",
-        "Port apcupsd": "Port apcupsd",
-        "Puissance de l'onduleur": "Puissance de l'onduleur",
-        "Nom": "Nom",
-        "Valeur": "Valeur",
-        "Paramètres": "Paramètres"
+        "Commentaire": "Comentario",
+        "Adresse apcupsd": "Dirección IP apcupsd",
+        "Port apcupsd": "Puerto apcupsd",
+        "Puissance de l'onduleur": "Potencia del UPS",
+        "Nom": "Nombre",
+        "Valeur": "Valor",
+        "Paramètres": "Parámetros"
     },
     "plugins\/apcups\/desktop\/js\/apcups.js": {
-        "Historiser": "Historiser"
+        "Historiser": "Historizar"
     },
     "plugins\/apcups\/core\/class\/apcups.class.php": {
-        "Statut": "Statut",
-        "Evènement": "Evènement",
-        "Temps sur batterie": "Temps sur batterie",
-        "Courant Entrant": "Courant Entrant",
-        "Voltage Pile": "Voltage Pile",
-        "Modèle d'onduleur": "Modèle d'onduleur",
-        "% Charge": "% Charge",
-        "Batterie": "Batterie",
-        "Puissance fournie": "Puissance fournie",
-        "L\\adresse ne peut etre vide": "L\\adresse ne peut etre vide"
+        "Statut": "Estado",
+        "Evènement": "Evento",
+        "Temps sur batterie": "Tiempo con bateria",
+        "Courant Entrant": "Corriente entrante",
+        "Voltage Pile": "Voltaje batería",
+        "Modèle d'onduleur": "Modelo UPS",
+        "% Charge": "% Carga",
+        "Batterie": "Batería",
+        "Puissance fournie": "Energía suministrada",
+        "L\\adresse ne peut etre vide": "La dirección ip no puede estar vacía"
     }
 }
