--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -24,7 +24,9 @@
         "Paramètres": "Parámetros"
     },
     "plugins\/apcups\/desktop\/js\/apcups.js": {
-        "Historiser": "Historizar"
+        "Historiser": "Historizar",
+        "Nom de la commande": "Nom de la commande",
+        "Tester": "Tester"
     },
     "plugins\/apcups\/core\/class\/apcups.class.php": {
         "Statut": "Estado",
@@ -36,6 +38,11 @@
         "% Charge": "% Carga",
         "Batterie": "Batería",
         "Puissance fournie": "Energía suministrada",
-        "L\\adresse ne peut etre vide": "La dirección ip no puede estar vacía"
+        "Apcupsd": "Apcupsd",
+        "NOK": "NOK",
+        "Indique si le service apcupsd est démarré": "Indique si le service apcupsd est démarré",
+        "The command": "La commande",
+        "has failed or not returned any string.": "a echouée ou n'a pas retournée de résultat.",
+        "L'adresse ne peut etre vide": "L'adresse ne peut etre vide"
     }
 }
