--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -25,8 +25,8 @@
     },
     "plugins\/apcups\/desktop\/js\/apcups.js": {
         "Historiser": "Archivieren",
-        "Nom de la commande": "Nom de la commande",
-        "Tester": "Tester"
+        "Nom de la commande": "Name des Befehls",
+        "Tester": "Testen"
     },
     "plugins\/apcups\/core\/class\/apcups.class.php": {
         "Statut": "Status",
@@ -40,9 +40,9 @@
         "Puissance fournie": "Leistungsaufnahme",
         "Apcupsd": "Apcupsd",
         "NOK": "NOK",
-        "Indique si le service apcupsd est démarré": "Indique si le service apcupsd est démarré",
-        "The command": "La commande",
-        "has failed or not returned any string.": "a echouée ou n'a pas retournée de résultat.",
-        "L'adresse ne peut etre vide": "L'adresse ne peut etre vide"
+        "Indique si le service apcupsd est démarré": "Zeigt an, ob der Apcupsd Dienst gestartet ist",
+        "The command": "Befehl",
+        "has failed or not returned any string.": "ein fehlerhaftes oder nicht zurückgegebenes Ergebnis. ",
+        "L'adresse ne peut etre vide": "Die Adresse darf nicht leer sein"
     }
 }
