[ROBOT] Action all

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -2,47 +2,47 @@
     "plugins\/apcups\/desktop\/php\/apcups.php": {
         "Ajouter un équipement": "Add equipment",
         "Rechercher": "Search",
-        "Mes onduleurs APC": "Mes onduleurs APC",
+        "Mes onduleurs APC": "My APC ups",
         "Sauvegarder": "Save",
         "Supprimer": "Delete",
         "Configuration avancée": "Adanced Settings",
         "Equipement": "Equipment",
         "Commandes": "Commands",
         "Onduleur APC": "APC ups",
-        "Nom de l'équipement apcups": "Nom de l'équipement apcups",
+        "Nom de l'équipement apcups": "APC ups name",
         "Objet parent": "Parent object",
         "Aucun": "None",
         "Catégorie": "Category",
         "Activer": "Enable",
         "Visible": "Visible",
-        "Commentaire": "Commentaire",
-        "Adresse apcupsd": "Adresse apcupsd",
-        "Port apcupsd": "Port apcupsd",
-        "Puissance de l'onduleur": "Puissance de l'onduleur",
-        "Nom": "Nom",
-        "Valeur": "Valeur",
-        "Paramètres": "Paramètres"
+        "Commentaire": "Comment",
+        "Adresse apcupsd": "apcupsd address",
+        "Port apcupsd": "apcupsd port",
+        "Puissance de l'onduleur": "Inverter power",
+        "Nom": "Name",
+        "Valeur": "Value",
+        "Paramètres": "Settings"
     },
     "plugins\/apcups\/desktop\/js\/apcups.js": {
-        "Historiser": "Historiser",
-        "Nom de la commande": "Nom de la commande",
-        "Tester": "Tester"
+        "Historiser": "Historize",
+        "Nom de la commande": "Command name",
+        "Tester": "Test"
     },
     "plugins\/apcups\/core\/class\/apcups.class.php": {
-        "Statut": "Statut",
-        "Evènement": "Evènement",
-        "Temps sur batterie": "Temps sur batterie",
-        "Courant Entrant": "Courant Entrant",
-        "Voltage Pile": "Voltage Pile",
-        "Modèle d'onduleur": "Modèle d'onduleur",
+        "Statut": "Status",
+        "Evènement": "Event",
+        "Temps sur batterie": "Time on battery",
+        "Courant Entrant": "Incoming power supply",
+        "Voltage Pile": "Voltage Battery",
+        "Modèle d'onduleur": "Inverter model",
         "% Charge": "% Charge",
-        "Batterie": "Batterie",
-        "Puissance fournie": "Puissance fournie",
+        "Batterie": "Battery",
+        "Puissance fournie": "Output",
         "Apcupsd": "Apcupsd",
         "NOK": "NOK",
-        "Indique si le service apcupsd est démarré": "Indique si le service apcupsd est démarré",
-        "The command": "La commande",
-        "has failed or not returned any string.": "a echouée ou n'a pas retournée de résultat.",
-        "L'adresse ne peut etre vide": "L'adresse ne peut etre vide"
+        "Indique si le service apcupsd est démarré": "Indicates if the apcupsd service is started",
+        "The command": "The command",
+        "has failed or not returned any string.": "failed or did not return a result.",
+        "L'adresse ne peut etre vide": "The address can not be empty"
     }
 }
