--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -3,7 +3,7 @@
         "Ajouter un équipement": "Agregar un dispositivo",
         "Rechercher": "Buscar",
         "Mes onduleurs APC": "Mis UPS APC",
-        "Sauvegarder": "Salvar",
+        "Sauvegarder": "Guardar",
         "Supprimer": "Borrar",
         "Configuration avancée": "Configuración avanzada",
         "Equipement": "Dispositivo",
